--- a/Maui.IndustriesDictionary/MainPage.xaml
+++ b/Maui.IndustriesDictionary/MainPage.xaml
@@ -4,7 +4,6 @@
              x:Class="Maui.IndustriesDictionary.MainPage"
              Shell.NavBarIsVisible="False"
              BackgroundColor="#5CCDFD"
-               xmlns:iconPacks="using:MahApps.Metro.IconPacks"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui">
 
     <!--necessary Code  for any page and Dont forget  xmlns:mct  line in top of page-->
@@ -17,15 +16,13 @@
 
         <Grid>
 
-      
-
             <ScrollView Grid.Row="0"
                         Grid.Column="0"
                         Grid.ColumnSpan="3"
                         Grid.RowSpan="3">
 
                 <CollectionView x:Name="CollectionMainWords"
-                                Margin="0,110,0,150"
+                                Margin="0,135,0,150"
                                 SelectionMode="Single"
                                 ItemsSource="{Binding  }">
 
@@ -62,6 +59,7 @@
                                            FontSize="Small"
                                            TextColor="Black"
                                            Grid.Column="1"
+                                           FontFamily="sun"
                                            Grid.ColumnSpan="2" />
 
                                     <Image Source="germany_card.png"
@@ -73,6 +71,7 @@
                                            FontSize="Small"
                                            TextColor="Black"
                                            Grid.Column="1"
+                                           FontFamily="sun"
                                            Grid.ColumnSpan="2"
                                            Grid.Row="1" />
 
@@ -112,30 +111,55 @@
                 
             </ScrollView>
 
+            <!--Loading bar-->
             <ActivityIndicator 
                 Grid.Column="0"
                                Grid.ColumnSpan="3"
                                Grid.Row="0"
                                Grid.RowSpan="3"
-                               Color="SteelBlue"
+                               Color="RoyalBlue"
                                WidthRequest="50"
                                HeightRequest="50"
                                x:Name="LoadingBar"
                                IsRunning="True"
                                IsVisible="false" />
 
+            <!--poster-->
+                    <VerticalStackLayout VerticalOptions="Center"
+                                         HorizontalOptions="Center"
+                                     Margin="10,0,10,100"
+                                     BackgroundColor="Transparent"
+                                             x:Name="poster"
+                                             Spacing="20">
 
+                        <Image Source="pos.png"
+                               Margin="0,0" 
+                               Scale="1.8"
+                               HeightRequest="140"
+                              />
 
+                    <Label Text="کلمه مورد نظر خود را جستجو کنید."
+                           TextColor="#F7F2F2"
+                           FontSize="Small"
+                           HorizontalOptions="Center"
+                           VerticalOptions="Center"
+                           FontAttributes="Bold" Margin="0,10"/>
+                        
+                </VerticalStackLayout>
+                  
+            
+                
         </Grid>
 
         <!--toolbar-->
         <Border HeightRequest="55"
                 BackgroundColor="White"
-                Margin="20,10,20,0"
+                Margin="20,30,20,0"
                 VerticalOptions="Start"
-                Stroke="#00A3FF"
+                Stroke="gray"
                 StrokeThickness="2"
-                StrokeShape="RoundRectangle 8">
+                StrokeShape="RoundRectangle 8"
+                x:Name="toolbar">
             <Border.Shadow>
                 <Shadow Brush="#000000"
                         Offset="0 , 4"
@@ -143,6 +167,10 @@
                         Radius="4" />
             </Border.Shadow>
 
+            <Border.GestureRecognizers>
+                <TapGestureRecognizer Tapped="toobar_Tapped" />
+            </Border.GestureRecognizers>
+            
             <HorizontalStackLayout Margin="10,0"
                                    Spacing="15"
                                    FlowDirection="RightToLeft">
@@ -170,20 +198,26 @@
                 </HorizontalStackLayout>
 
 
+
                 <Entry x:Name="SearchText"
                        Placeholder="جستجوی کلمه"
                        VerticalOptions="Center"
                        PlaceholderColor="Gray"
-                       FontSize="Medium"
-                       BackgroundColor="red"
-                       TextChanged="Entry_TextChanged" />
+                       FontSize="Small"
+                       TextChanged="Entry_TextChanged">
+
+                    <Entry.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="toobar_Tapped" />
+                    </Entry.GestureRecognizers>
+
+                </Entry>
 
                 <ImageButton x:Name="search_img"
                              Source="search.png"
                              WidthRequest="20"
                              HeightRequest="20"
                              VerticalOptions="Center"
-                             Margin="100,0,00,0"
+                             Margin="90,0,00,0"
                              HorizontalOptions="End" />
                 
             </HorizontalStackLayout>
@@ -192,7 +226,7 @@
         <!--advance search section-->
         <Grid HeightRequest="40"
                 WidthRequest="200"
-                Margin="0,65"
+                Margin="0,90"
                 VerticalOptions="Start"
                 HorizontalOptions="Center"
              >
@@ -225,7 +259,7 @@
                 <Border x:Name="start_with_lay"
                         Stroke="LightGray"
                         StrokeThickness="2"
-                        BackgroundColor="SteelBlue"
+                        BackgroundColor="RoyalBlue"
                         VerticalOptions="Start"
                         HeightRequest="40"
                         Margin="0,0,0,0"
@@ -258,7 +292,7 @@
                 WidthRequest="120"
                 HeightRequest="130"
                 StrokeShape="RoundRectangle 8"
-                Margin="0,55,20,0">
+                Margin="0,75,20,0">
 
             <VerticalStackLayout Margin="10"
                                  Spacing="5">
@@ -267,6 +301,8 @@
                            WidthRequest="34"
                            HeightRequest="34" />
                     <Label Text="English"
+                           FontSize="Micro"
+                           
                            VerticalOptions="Center" />
                     <HorizontalStackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="FirstItem_Tapped" />
@@ -277,7 +313,9 @@
                     <Image Source="germany.svg"
                            WidthRequest="34"
                            HeightRequest="34" />
-                    <Label Text="Dutch"
+                    <Label Text="german"
+                           FontSize="Micro"
+                           
                            VerticalOptions="Center" />
                     <HorizontalStackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="SecondItem_Tapped" />
@@ -289,6 +327,7 @@
                            WidthRequest="34"
                            HeightRequest="34" />
                     <Label Text="فارسی"
+                           FontSize="Micro"
                            VerticalOptions="Center" />
                     <HorizontalStackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="ThirdItem_Tapped" />
